--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <section id="hero">
             <h2>Handcrafted, home-made masterpieces</h2>
-            <form id="form" action="https://www.freecodecamp.com/email-submit">
+            <form id="form" action="">
                 <input name="email" id="email" type="email" placeholder="Enter your email address" required />
                 <input id="submit" type="submit" value="Get Started" class="btn" />
             </form>
